# fullstack-python

./: README.md  main.py  pyproject.toml
controllers/: item_controller.py  user_controller.py
database/: connection.py
frontend/: app.py
models/: items_model.py  user_model.py
routes/: item_routes.py  user_routes.py
