[project]
name = "package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pydantic>=2.13.2",
    "pymongo>=4.16.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
    "uvicorn>=0.39.0",
]
